<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.AuthFragment"
    android:background="@color/main_background"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_main_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.115" />

        <TextView
            android:id="@+id/auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing=".2"
            android:text="@string/authorization"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/logo"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="@id/logo"
            app:layout_constraintTop_toTopOf="@id/logo"
            app:layout_constraintVertical_bias="0.279" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            android:textColor="@color/pale_text"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.185"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="@id/auth"
            app:layout_constraintVertical_bias="0.057" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:inputType="phone"
            android:text="234423"
            android:textColor="@color/white"
            android:translationX="24dp"
            android:maxEms="14"
            android:maxLength="14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/login"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/login"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintVertical_bias="0.028" />


        <View
            android:id="@+id/line1"
            android:layout_width="250dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:background="@color/pale_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/phoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
            app:layout_constraintVertical_bias="0.002" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/secondary_color"
            android:text="@string/sign_in"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/line"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/line"
            app:layout_constraintTop_toBottomOf="@+id/auth"
            app:layout_constraintVertical_bias="0.725" />

        <View
            android:id="@+id/line"
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:background="@color/pale_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintStart_toStartOf="@+id/passwordEt"
            app:layout_constraintTop_toBottomOf="@+id/passwordTv"
            app:layout_constraintVertical_bias="0.17000002" />

        <TextView
            android:id="@+id/passwordTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/pale_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.193"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/auth"
            app:layout_constraintVertical_bias="0.39" />

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="numberPassword"
            android:text="ASDAasdasd"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/passwordTv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/passwordTv"
            app:layout_constraintTop_toBottomOf="@+id/passwordTv"
            app:layout_constraintVertical_bias="0.050000012" />

        <TextView
            android:id="@+id/faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faq"
            android:textColor="@color/misc_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.921" />

        <TextView
            android:id="@+id/companyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/company_name"
            android:textColor="@color/misc_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/faq"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="@+id/faq"
            app:layout_constraintTop_toBottomOf="@+id/faq"
            app:layout_constraintVertical_bias="0.08" />

        <TextView
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="+7 "
            android:textColor="@color/white"
            android:textSize="18dp"
            android:translationX="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/phoneNumber"
            app:layout_constraintEnd_toStartOf="@+id/phoneNumber"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/phoneNumber"
            app:layout_constraintVertical_bias="0.56" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>